--- a/src/assets/styles/pages/equip-page.scss
+++ b/src/assets/styles/pages/equip-page.scss
@@ -114,14 +114,20 @@
     @media (max-width: ($breakpoint - 1px)) {
       @include fsl(12px, 120%);
     }
-    color: $color-gray;
-    transition: $transition;
-
+    
     &:not(:first-child) {
       margin-top: 12px;
       @media (max-width: ($breakpoint - 1px)) {
         margin-top: 8px;
       }
+    }
+  }
+  &__card-link {
+    color: $color-gray;
+    transition: $transition;
+
+    &:hover {
+      color: $color-blue;
     }
   }
 
