--- a/src/views/pages/equip.pug
+++ b/src/views/pages/equip.pug
@@ -84,7 +84,8 @@ block content
                       ul.equip-page__card-list 
                         each el in item.items
                           li.equip-page__card-item 
-                            |#{el}
+                            div.equip-page__card-link
+                              |#{el}
                     .arrow-icon
                       +big-arrow-svg.arrow-icon__svg
         .section__block
