--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -141,7 +141,7 @@ mixin header
               .mobile-menu__item-icon 
                 +arrow-svg.mobile-menu__item-svg
             ul.mobile-menu__list 
-              each item, i in ['Оборудование', 'Инструмент', 'Услуги', 'Публикации']
+              each item, i in ['Оборудование', 'Инструмент', 'Услуги', 'Публикации', 'Документация']
                 li.mobile-menu__item(data-modal-btn=i)
                   .mobile-menu__item-text 
                     |#{item}
@@ -219,6 +219,18 @@ mixin header
               .mobile-menu__modal(data-modal-menu='3') 
                 .mobile-menu__modal-top 
                   .mobile-menu__modal-back(data-modal-close='3') 
+                    .mobile-menu__modal-icon 
+                      +arrow-svg.mobile-menu__modal-svg
+                    .mobile-menu__modal-text 
+                      |Услуги
+                ul.mobile-menu__modal-list 
+                  each item in ['Подбор инструмента', 'Ленточные пилы', 'Сервис', 'Инжиниринг', 'Обучение', 'Лизинг']
+                    li.mobile-menu__modal-item
+                      a(href="#") 
+                        |#{item}
+              .mobile-menu__modal(data-modal-menu='4') 
+                .mobile-menu__modal-top 
+                  .mobile-menu__modal-back(data-modal-close='4') 
                     .mobile-menu__modal-icon 
                       +arrow-svg.mobile-menu__modal-svg
                     .mobile-menu__modal-text 
