--- a/src/assets/styles/pages/contacts-page.scss
+++ b/src/assets/styles/pages/contacts-page.scss
@@ -104,6 +104,8 @@
   }
 
   &__text {
+    margin-top: 2px;
+
     font-weight: 500;
     @include fsl(14px, 140%);
   }
@@ -136,7 +138,6 @@
     @media (max-width: ($breakpoint - 1px)) {
       display: block;
     }
-    
 
     justify-content: space-between;
 
@@ -147,13 +148,6 @@
 
   &__section-col {
     flex-shrink: 0;
-    width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
-    display: flex;
-
-    @media (max-width: ($breakpoint - 1px)) {
-      width: 100%;
-      display: block;
-    }
 
     @media print {
       width: 50%;
@@ -161,75 +155,27 @@
     }
 
     &:nth-child(1) {
-      #{$comp}__section-item {
-        width: calc(#{$col-part-d} * 2);
-
-        @media (max-width: ($breakpoint - 1px)) {
-          width: 100%;
-        }
-
-        &:first-child {
-          width: calc(#{$col-part-d} * 2 - #{$col-gap-d});
-
-          @media (max-width: ($breakpoint - 1px)) {
-            width: 100%;
-          }
-        }
+      margin-right: calc(#{$col-gap-d});
+      width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-right: 0;
+        width: auto;
       }
     }
 
     &:nth-child(2) {
+      width: calc(#{$col-part-d} * 8 - #{$col-gap-d});
       @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 20px;
+        width: auto;
+      }
+      @media (max-width: ($breakpoint-m - 1px)) {
         margin-top: 12px;
       }
 
       @media print {
         margin-top: 12px;
       }
-
-      #{$comp}__section-item {
-        width: calc(#{$col-part-d} * 2);
-
-        @media (max-width: ($breakpoint - 1px)) {
-          width: 100%;
-        }
-
-        &:last-child {
-          width: calc(#{$col-part-d} * 2 - #{$col-gap-d});
-
-          @media (max-width: ($breakpoint - 1px)) {
-            width: 100%;
-          }
-        }
-      }
-    }
-  }
-
-  &__section-item {
-    &:not(:first-child) {
-      @media (max-width: ($breakpoint - 1px)) {
-        margin-top: 12px;
-      }
-
-      @media print {
-        margin-top: 12px;
-      }
-    }
-  }
-
-  &__img {
-    display: flex;
-    align-items: center;
-
-    overflow: hidden;
-    border-radius: 4px;
-
-    @media (max-width: ($breakpoint - 1px)) {
-      border-radius: 2px;
-    }
-
-    @media print {
-      display: none;
     }
   }
 
@@ -237,9 +183,9 @@
     --itemCount: 2;
     --gap: 20px;
 
-    @media (max-width: ($breakpoint - 1px)) {
+    @media (max-width: ($breakpoint-m - 1px)) {
       --itemCount: 1;
-      --gap: 40px;
+      --gap: 12px;
       row-gap: var(--gap);
     }
 
@@ -250,84 +196,25 @@
 
     display: grid;
     grid-template-columns: repeat(var(--itemCount), 1fr);
+    @media (max-width: ($breakpoint - 1px)) {
+      grid-template-columns: repeat(var(--itemCount), calc(#{$col-part-alt} * 2 - #{$col-gap-m}));
+    }
+    @media (max-width: ($breakpoint-m - 1px)) {
+      grid-template-columns: 1fr;
+    }
     column-gap: var(--gap);
+    row-gap: var(--gap);
   }
 
-  &__grid-item {
-    @media (max-width: ($breakpoint-ll - 1px)) {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    @media (max-width: ($breakpoint - 1px)) {
-      display: block;
-    }
-
-    &--block {
-      display: block;
+  &__map {
+    height: 100%;
+    min-height: 260px;
+    @media (max-width: ($breakpoint-m - 1px)) {
+      min-height: 190px;
     }
   }
+}
 
-  &__grid-row {
-    display: flex;
-
-    @media (max-width: ($breakpoint - 1px)) {
-      display: block;
-    }
-
-    justify-content: space-between;
-    @media print {
-      display: flex;
-    }
-  }
-
-  &__grid-col {
-    flex-shrink: 0;
-    width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
-
-    @media (max-width: ($breakpoint - 1px)) {
-      width: 100%;
-    }
-    @media print {
-      width: 50%;
-    }
-
-    &:nth-child(2) {
-      @media (max-width: ($breakpoint - 1px)) {
-        margin-top: 16px;
-      }
-    }
-  }
-
-  &__grid-inner {
-    display: flex;
-
-    @media (max-width: ($breakpoint-ll - 1px)) {
-      display: block;
-    }
-
-    // @media (max-width: ($breakpoint - 1px)) {
-    //   display: block;
-    // }
-
-    @media print {
-      display: block;
-    }
-  }
-
-  &__grid-right {
-    margin-left: 32px;
-
-    @media (max-width: ($breakpoint-ll - 1px)) {
-      margin-left: 0;
-    }
-
-    // @media (max-width: ($breakpoint - 1px)) {
-    //   margin-left: 0;
-    // }
-
-    @media print {
-      margin-left: 0;
-    }
-  }
+.placemarks {
+  display: none;
 }
