--- a/src/views/pages/contacts.pug
+++ b/src/views/pages/contacts.pug
@@ -1,6 +1,234 @@
 extends ../layouts/master.pug
 
-block content 
+block content
+  -
+    var ddata = {
+      ST: [
+        {
+          label: 'Россия, звонок бесплатный',
+          items: [
+            {
+              isLink: true,
+              href: 'tel:8 800 444-60-98',
+              text: '8 800 444-60-98',
+            },
+          ]
+        },
+        {
+          label: 'Многоканальный',
+          items: [
+            {
+              isLink: true,
+              href: 'tel:8 812 600-60-98',
+              text: '8 812 600-60-98',
+            },
+          ]
+        },
+        {
+          label: 'Отдел продаж',
+          items: [
+            {
+              isLink: true,
+              href: 'tel:8 812 600-60-98',
+              text: '8 812 600-60-98',
+            },
+            {
+              isLink: true,
+              href: 'mailto:irlen@irlen.ru',
+              text: 'irlen@irlen.ru',
+            },
+          ]
+        },
+        {
+          label: 'Инструментальный отдел',
+          items: [
+            {
+              isLink: true,
+              href: 'tel:8 911 769-41-26',
+              text: '8 911 769-41-26',
+            },
+            {
+              isLink: true,
+              href: 'tel:8 812 923-36-93',
+              text: '8 812 923-36-93',
+            },
+            {
+              isLink: true,
+              href: 'mailto:tool@irlen.ru',
+              text: 'tool@irlen.ru',
+            },
+          ]
+        },
+        {
+          label: 'Служба сервиса',
+          items: [
+            {
+              isLink: true,
+              href: 'tel:8 911 769-41-26',
+              text: '8 911 769-41-26',
+            },
+            {
+              isLink: true,
+              href: 'tel:8 812 923-36-93',
+              text: '8 812 923-36-93',
+            },
+            {
+              isLink: true,
+              href: 'mailto:tool@irlen.ru',
+              text: 'tool@irlen.ru',
+            },
+          ]
+        },
+        {
+          label: 'Заказ ленточных полотен',
+          items: [
+            {
+              isLink: true,
+              href: 'tel:8 911 947-89-93',
+              text: '8 911 947-89-93',
+            },
+          ]
+        },
+        {
+          label: 'Адрес',
+          items: [
+            {
+              isLink: false,
+              text: 'ул. Старожиловская, 9',
+            },
+          ]
+        },
+        {
+          label: 'Время работы',
+          items: [
+            {
+              isLink: false,
+              text: '09:00 — 17:00',
+            },
+          ]
+        },
+      ],
+      MSK: [
+        {
+          label: 'Отдел продаж',
+          items: [
+            {
+              isLink: true,
+              href: 'tel:8 495 367-11-25',
+              text: '8 495 367-11-25',
+            },
+            {
+              isLink: true,
+              href: 'tel:8 985 516-74-68',
+              text: '8 985 516-74-68',
+            },
+            {
+              isLink: true,
+              href: 'mailto:irlen@irlen-m.ru',
+              text: 'irlen@irlen-m.ru',
+            },
+          ]
+        },
+        {
+          label: 'Адрес',
+          items: [
+            {
+              isLink: false,
+              text: 'ул. Старожиловская, 9',
+            },
+          ]
+        },
+      ],
+      NOV: [
+        {
+          label: 'Отдел продаж',
+          items: [
+            {
+              isLink: true,
+              href: 'tel:8 915 945-16-26',
+              text: '8 915 945-16-26',
+            },
+            {
+              isLink: true,
+              href: 'tel:8 910 144-77-16',
+              text: '8 910 144-77-16',
+            },
+            {
+              isLink: true,
+              href: 'tel:8 831 249-99-88',
+              text: '8 831 249-99-88',
+            },
+            {
+              isLink: true,
+              href: 'mailto:nn@irlen.ru',
+              text: 'nn@irlen.ru',
+            },
+          ]
+        },
+        {
+          label: 'Адрес',
+          items: [
+            {
+              isLink: false,
+              text: 'Московское ш., д.52',
+            },
+          ]
+        },
+      ],
+      EKB: [
+        {
+          label: 'Отдел продаж',
+          items: [
+            {
+              isLink: true,
+              href: 'tel:8 965 535-23-33',
+              text: '8 965 535-23-33',
+            },
+            {
+              isLink: true,
+              href: 'tel:8 919 370-61-38',
+              text: '8 919 370-61-38',
+            },
+            {
+              isLink: true,
+              href: 'tel:8 343 383-44-80',
+              text: '8 343 383-44-80',
+            },
+            {
+              isLink: true,
+              href: 'mailto:ekb@irlen.ru',
+              text: 'ekb@irlen.ru',
+            },
+          ]
+        },
+        {
+          label: 'Адрес',
+          items: [
+            {
+              isLink: false,
+              text: 'Московское ш., д.52',
+            },
+          ]
+        },
+      ],
+      PERM: [
+        {
+          label: 'Отдел продаж',
+          items: [
+            {
+              isLink: true,
+              href: 'tel:8 908 271-68-76',
+              text: '8 908 271-68-76',
+            },
+            {
+              isLink: true,
+              href: 'mailto:perm@irlen.ru',
+              text: 'perm@irlen.ru',
+            },
+          ]
+        },
+      ],
+    }
   .contacts-page 
     section.section.section--first 
       .container 
@@ -27,158 +255,128 @@ block content
             |Санкт-Петербург
           .contacts-page__section-row 
             .contacts-page__section-col
-              .contacts-page__section-item
-                .contacts-page__label 
-                  |Россия, звонок бесплатный
-                a.contacts-page__link(href="tel:8 800 444-60-98") 
-                  |8 800 444-60-98
-              .contacts-page__section-item
-                .contacts-page__label 
-                  |Многоканальный
-                a.contacts-page__link(href="tel:8 812 600-60-98") 
-                  |8 812 600-60-98
-              .contacts-page__section-item
-                .contacts-page__label 
-                  |Отдел продаж
-                a.contacts-page__link(href="tel:8 812 600-60-98") 
-                  |8 812 600-60-98
-                a.contacts-page__link(href="mailto:irlen@irlen.ru") 
-                  |irlen@irlen.ru
-            .contacts-page__section-col
-              .contacts-page__section-item
-                .contacts-page__label 
-                  |Инструментальный отдел
-                a.contacts-page__link(href="tel:8 911 769-41-26") 
-                  |8 911 769-41-26
-                a.contacts-page__link(href="tel:8 812 923-36-93") 
-                  |8 812 923-36-93
-                a.contacts-page__link(href="mailto:tool@irlen.ru") 
-                  |tool@irlen.ru
-              .contacts-page__section-item
-                .contacts-page__label 
-                  |Служба сервиса
-                a.contacts-page__link(href="tel:8 911 769-41-26") 
-                  |8 911 769-41-26
-                a.contacts-page__link(href="tel:8 812 923-36-93") 
-                  |8 812 923-36-93
-                a.contacts-page__link(href="mailto:tool@irlen.ru") 
-                  |tool@irlen.ru
-              .contacts-page__section-item
-                .contacts-page__label 
-                  |Заказ ленточных полотен
-                a.contacts-page__link(href="tel:8 911 947-89-93") 
-                  |8 911 947-89-93
-          .contacts-page__section-row.contacts-page__block
-            .contacts-page__section-col 
-              .contacts-page__section-item 
-                .contacts-page__label 
-                  |Адрес
-                addres.contacts-page__text
-                  |ул. Старожиловская, 9
-              .contacts-page__section-item 
-                .contacts-page__label 
-                  |Время работы
-                .contacts-page__text
-                  |09:00 — 17:00
-          .contacts-page__inner 
-            .contacts-page__img 
-              img.desktop(src="assets/images/contacts-1.jpg", alt="")
-              img.mobile(src="assets/images/contacts-1-mobile.jpg", alt="")
-    section.section
+              .contacts-page__grid
+                each item in ddata.ST
+                  .contacts-page__grid-item 
+                    .contacts-page__label 
+                      |#{item.label}
+                    each link in item.items
+                      if (link.isLink)
+                        a.contacts-page__link(href=link.href) 
+                          |#{link.text}
+                      else 
+                        .contacts-page__text 
+                          |#{link.text}
+            .contacts-page__section-col(data-map-container='')
+              .contacts-page__map#st(data-map-parent='60.081669 30.263908')
+              ul.placemarks
+                li.placemarks__item
+                  .placemarks__latitude 
+                    |60.081669
+                  .placemarks__longitude
+                    |30.263908
+    section.section 
       .container 
-        .contacts-page__grid 
-          .contacts-page__grid-item
-            h3.contacts-page__title
-              |Москва
-            .contacts-page__grid-row 
-              .contacts-page__grid-col
-                .contacts-page__label 
-                  |Отдел продаж
-                .contacts-page__grid-inner 
-                  .contacts-page__grid-left 
-                    a.contacts-page__link(href="tel:8 495 367-11-25") 
-                      |8 495 367-11-25
-                    a.contacts-page__link(href="tel:8 985 516-74-68") 
-                      |8 985 516-74-68
-                  .contacts-page__grid-right
-                    a.contacts-page__link(href="mailto:irlen@irlen-m.ru")
-                      |irlen@irlen-m.ru 
-              .contacts-page__grid-col
-                .contacts-page__label 
-                  |Адрес
-                addres.contacts-page__text
-                  |ул. Старожиловская, 9
-            .contacts-page__inner 
-              .contacts-page__img 
-                img.desktop(src="assets/images/contacts-2.jpg", alt="")
-                img.mobile(src="assets/images/contacts-1-mobile.jpg", alt="")
-          .contacts-page__grid-item
-            h3.contacts-page__title
-              |Нижний Новгород
-            .contacts-page__grid-row 
-              .contacts-page__grid-col
-                .contacts-page__label 
-                  |Отдел продаж
-                .contacts-page__grid-inner 
-                  .contacts-page__grid-left 
-                    a.contacts-page__link(href="tel:8 915 945-16-26") 
-                      |8 915 945-16-26
-                    a.contacts-page__link(href="tel:8 910 144-77-16") 
-                      |8 910 144-77-16
-                  .contacts-page__grid-right
-                    a.contacts-page__link(href="tel:8 831 249-99-88")
-                      |8 831 249-99-88
-                    a.contacts-page__link(href="mailto:nn@irlen.ru")
-                      |nn@irlen.ru
-              .contacts-page__grid-col
-                .contacts-page__label 
-                  |Адрес
-                addres.contacts-page__text
-                  |Московское ш., д.52
-            .contacts-page__inner 
-              .contacts-page__img 
-                img.desktop(src="assets/images/contacts-2.jpg", alt="")
-                img.mobile(src="assets/images/contacts-1-mobile.jpg", alt="")
+        .contacts-page__section 
+          h3.contacts-page__title
+            |Москва
+          .contacts-page__section-row 
+            .contacts-page__section-col
+              .contacts-page__grid
+                each item in ddata.MSK
+                  .contacts-page__grid-item 
+                    .contacts-page__label 
+                      |#{item.label}
+                    each link in item.items
+                      if (link.isLink)
+                        a.contacts-page__link(href=link.href) 
+                          |#{link.text}
+                      else 
+                        .contacts-page__text 
+                          |#{link.text}
+            .contacts-page__section-col(data-map-container='')
+              .contacts-page__map#msk(data-map-parent='55.730587 37.612919')
+              ul.placemarks
+                li.placemarks__item
+                  .placemarks__latitude 
+                    |55.730587
+                  .placemarks__longitude
+                    |37.612919
+    section.section 
+      .container 
+        .contacts-page__section 
+          h3.contacts-page__title
+            |Нижний Новгород
+          .contacts-page__section-row 
+            .contacts-page__section-col
+              .contacts-page__grid
+                each item in ddata.NOV
+                  .contacts-page__grid-item 
+                    .contacts-page__label 
+                      |#{item.label}
+                    each link in item.items
+                      if (link.isLink)
+                        a.contacts-page__link(href=link.href) 
+                          |#{link.text}
+                      else 
+                        .contacts-page__text 
+                          |#{link.text}
+            .contacts-page__section-col(data-map-container='')
+              .contacts-page__map#nn(data-map-parent='56.284033 43.999876')
+              ul.placemarks
+                li.placemarks__item
+                  .placemarks__latitude 
+                    |56.284033
+                  .placemarks__longitude
+                    |43.999876
+    section.section 
+      .container 
+        .contacts-page__section 
+          h3.contacts-page__title
+            |Екатеринбург
+          .contacts-page__section-row 
+            .contacts-page__section-col
+              .contacts-page__grid
+                each item in ddata.EKB
+                  .contacts-page__grid-item 
+                    .contacts-page__label 
+                      |#{item.label}
+                    each link in item.items
+                      if (link.isLink)
+                        a.contacts-page__link(href=link.href) 
+                          |#{link.text}
+                      else 
+                        .contacts-page__text 
+                          |#{link.text}
+            .contacts-page__section-col(data-map-container='')
+              .contacts-page__map#ekb(data-map-parent='56.795305 60.560594')
+              ul.placemarks
+                li.placemarks__item
+                  .placemarks__latitude 
+                    |56.795305
+                  .placemarks__longitude
+                    |60.560594
     section.section.section--last
       .container 
-        .contacts-page__grid 
-          .contacts-page__grid-item
-            h3.contacts-page__title
-              |Екатеринбург
-            .contacts-page__grid-row 
-              .contacts-page__grid-col
-                .contacts-page__label 
-                  |Отдел продаж
-                .contacts-page__grid-inner 
-                  .contacts-page__grid-left 
-                    a.contacts-page__link(href="tel:8 965 535-23-33") 
-                      |8 965 535-23-33
-                    a.contacts-page__link(href="tel:8 919 370-61-38") 
-                      |8 919 370-61-38
-                  .contacts-page__grid-right
-                    a.contacts-page__link(href="tel:8 343 383-44-80")
-                      |8 343 383-44-80
-                    a.contacts-page__link(href="mailto:ekb@irlen.ru")
-                      |ekb@irlen.ru
-              .contacts-page__grid-col
-                .contacts-page__label 
-                  |Адрес
-                addres.contacts-page__text
-                  |Московское ш., д.52
-            .contacts-page__inner 
-              .contacts-page__img 
-                img.desktop(src="assets/images/contacts-2.jpg", alt="")
-                img.mobile(src="assets/images/contacts-1-mobile.jpg", alt="")
-          .contacts-page__grid-item.contacts-page__grid-item--block
-            h3.contacts-page__title
-              |Пермь
-            .contacts-page__grid-row 
-              .contacts-page__grid-col
-                .contacts-page__label 
-                  |Отдел продаж
-                .contacts-page__grid-inner 
-                  .contacts-page__grid-left 
-                    a.contacts-page__link(href="tel:8 908 271-68-76") 
-                      |8 908 271-68-76
-                    a.contacts-page__link(href="mailto:perm@irlen.ru") 
-                      |perm@irlen.ru
+        .contacts-page__section 
+          h3.contacts-page__title
+            |Пермь
+          .contacts-page__section-row 
+            .contacts-page__section-col
+              .contacts-page__grid
+                each item in ddata.PERM
+                  .contacts-page__grid-item 
+                    .contacts-page__label 
+                      |#{item.label}
+                    each link in item.items
+                      if (link.isLink)
+                        a.contacts-page__link(href=link.href) 
+                          |#{link.text}
+                      else 
+                        .contacts-page__text 
+                          |#{link.text}
+            .contacts-page__section-col
+              
+
+block scripts
+  script(src="https://api-maps.yandex.ru/2.1/?apikey=9eaf2d45-34a5-4620-bac6-0482e9335845&lang=ru_RU" type="text/javascript")
