--- a/src/assets/styles/pages/contacts-page.scss
+++ b/src/assets/styles/pages/contacts-page.scss
@@ -174,7 +174,7 @@
       }
 
       @media print {
-        margin-top: 12px;
+        display: none;
       }
     }
   }
@@ -190,7 +190,7 @@
     }
 
     @media print {
-      --itemCount: 1;
+      --itemCount: 3;
       --gap: 20px;
     }
 
@@ -201,6 +201,9 @@
     }
     @media (max-width: ($breakpoint-m - 1px)) {
       grid-template-columns: 1fr;
+    }
+    @media print {
+      grid-template-columns: repeat(var(--itemCount), 1fr);
     }
     column-gap: var(--gap);
     row-gap: var(--gap);
