--- a/src/views/pages/profile-data.pug
+++ b/src/views/pages/profile-data.pug
@@ -76,7 +76,7 @@ block content
                   .profile-page__form-item
                     .profile-page__form-label 
                       |Имя
-                    input.form__input(type='text' value='Кирилл' data-parsley-pattern="[a-zA-Zа-яёА-ЯЁ\\s]+")
+                    input.form__input(type='text' value='Кирилл' data-parsley-pattern="[a-zA-Zа-яёА-ЯЁ\\s]+" data-parsley-trigger="input")
                 .profile-page__buttons
                   .profile-page__button(data-change-button='')
                     .profile-page__icon 
