--- a/src/views/components/counter.pug
+++ b/src/views/components/counter.pug
@@ -3,7 +3,7 @@ mixin counter
     .counter__item.counter__item--minus(data-count-minus='')
       .counter__icon 
         |-
-    input(type="number" value="150").counter__number 
+    input.counter__number(type="number" value="1" data-count-number='')
     .counter__item.counter__item--plus(data-count-plus='')
       .counter__icon 
         |+
